kubernetes/apps/home/esphome/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ${APP}
  annotations:
    gethomepage.dev/description: ESPHome Device Management
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Home
    gethomepage.dev/icon: esphome
    gethomepage.dev/name: ESPHome
    gethomepage.dev/pod-selector: "app.kubernetes.io/name=esphome"
spec:
  hostnames:
    - "esphome.${SECRET_DOMAIN}"
  parentRefs:
    - name: envoy-internal
      namespace: network
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /code/
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: ${APP}
          namespace: home
          port: ${CODE_PORT}
    - backendRefs:
        - name: ${APP}
          namespace: home
          port: ${APP_PORT}
